RESOLVED FIXED311491
[JSC][WASM][Debugger] Fix WasmDebuggerDebuggable leak when process shuts down
https://bugs.webkit.org/show_bug.cgi?id=311491
Summary [JSC][WASM][Debugger] Fix WasmDebuggerDebuggable leak when process shuts down
Yijia Huang
Reported 2026-04-04 11:21:45 PDT
Attachments
Yijia Huang
Comment 1 2026-04-04 11:24:44 PDT
EWS
Comment 2 2026-04-04 14:02:01 PDT
Committed 310578@main (c51e9ffac777): <https://commits.webkit.org/310578@main> Reviewed commits have been landed. Closing PR #62048 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.